Restructure repo: board-wise layout with STM32C031C6

--- a/.gitignore
+++ b/.gitignore
@@ -1,55 +1,41 @@
-# Prerequisites
-*.d
+# ===============================
+# STM32CubeIDE / Eclipse
+# ===============================
+.metadata/
+.settings/
+*.launch
+*.log
 
-# Object files
+# ===============================
+# Build artifacts (DO NOT COMMIT)
+# ===============================
+Debug/
+Release/
+build/
 *.o
-*.ko
-*.obj
-*.elf
-
-# Linker output
-*.ilk
-*.map
-*.exp
-
-# Precompiled Headers
-*.gch
-*.pch
-
-# Libraries
-*.lib
-*.a
-*.la
-*.lo
-
-# Shared objects (inc. Windows DLLs)
-*.dll
-*.so
-*.so.*
-*.dylib
-
-# Executables
-*.exe
-*.out
-*.app
-*.i*86
-*.x86_64
-*.hex
-
-# Debug files
-*.dSYM/
+*.d
 *.su
-*.idb
-*.pdb
+*.lst
+*.map
+*.elf
+*.hex
+*.bin
 
-# Kernel Module Compile Results
-*.mod*
-*.cmd
-.tmp_versions/
-modules.order
-Module.symvers
-Mkfile.old
-dkms.conf
+# ===============================
+# OS / Editor junk
+# ===============================
+.DS_Store
+Thumbs.db
+*.tmp
+*.bak
 
-# debug information files
-*.dwo
+# ===============================
+# CubeMX backups
+# ===============================
+*.ioc.bak
+
+# ===============================
+# Python / scripts (future use)
+# ===============================
+__pycache__/
+*.pyc
